--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <a href="https://example.com">Game 1</a>
         <a href="https://example.com">Game 2</a>
         <a href="https://example.com">Game 3</a>
+        <img src="https://media0.giphy.com/media/v1.Y2lkPTZjMDliOTUyYTR3cjVrOTV4cGxjOG54ZmhqeW9raDJmZmcwcTI2Znc2YmZwOXhoaiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/Fr5LA2RCQbnVp74CxH/200.gif" alt="Subway Surfers GIFs - Find &amp; Share on GIPHY"/>
         <!-- PUT YOUR LINKS ABOVE -->
 
     </div>
