--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fun Games</title>
+    <title>Fun Games for school lol</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,7 +19,7 @@
         a {
             display: block;
             color: cyan;
-            font-size: 20px;
+            font-size: 50px;
             margin: 10px 0;
             text-decoration: none;
         }
