--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 <body>
 
     <div class="container">
-        <h1>🎮 Fun Games 🎮</h1>
+        <h1>🎮 Fun Games for school 🎮</h1>
 
         <!-- PUT YOUR LINKS BELOW -->
         <a href="https://example.com">Game 1</a>
         <a href="https://example.com">Game 2</a>
         <a href="https://example.com">Game 3</a>
         <img src="https://media0.giphy.com/media/v1.Y2lkPTZjMDliOTUyYTR3cjVrOTV4cGxjOG54ZmhqeW9raDJmZmcwcTI2Znc2YmZwOXhoaiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/Fr5LA2RCQbnVp74CxH/200.gif" alt="Subway Surfers GIFs - Find &amp; Share on GIPHY"/>
+        Please email this gmail to submit games to be added here bigoboyscato@gmail.com please name the email submition for me to see it.
         <!-- PUT YOUR LINKS ABOVE -->
 
     </div>
