--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <h1>🎮 Fun Games for school 🎮</h1>
 
         <!-- PUT YOUR LINKS BELOW -->
-        <a href="https://example.com">Game 1</a>
-        <a href="https://example.com">Game 2</a>
-        <a href="https://example.com">Game 3</a>
+        <a href="https://play.fancade.com/">Fancade</a>
+        <a href="https://baldis-basics-online.github.io/">Baldis basics classic</a>
+        <a href="https://poki.com/en/g/subway-surfers">Subway surfers</a>
         <img src="https://media0.giphy.com/media/v1.Y2lkPTZjMDliOTUyYTR3cjVrOTV4cGxjOG54ZmhqeW9raDJmZmcwcTI2Znc2YmZwOXhoaiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/Fr5LA2RCQbnVp74CxH/200.gif" alt="Subway Surfers GIFs - Find &amp; Share on GIPHY"/>
         Please email this gmail to submit games to be added here bigoboyscato@gmail.com please name the email submition for me to see it.
-        <!-- PUT YOUR LINKS ABOVE -->
+        <a href="https://poki.com/en/g/subway-surfers">Subway surfers</a>
 
     </div>
 
