--- a/index.html
+++ b/index.html
@@ -1,45 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fun Games for school lol</title>
+    <title>Fun Games</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #222;
+            background-color: #1a1a1a;
             color: white;
             text-align: center;
-            margin-top: 50px;
+            margin-top: 40px;
         }
         .container {
-            background: #333;
-            padding: 20px;
-            border-radius: 10px;
+            background: #2b2b2b;
+            padding: 25px;
+            border-radius: 15px;
             display: inline-block;
+            box-shadow: 0px 0px 15px black;
+            width: 350px;
+        }
+        h1 {
+            font-size: 32px;
         }
         a {
             display: block;
+            background: #222;
+            padding: 10px;
+            border-radius: 8px;
             color: cyan;
-            font-size: 50px;
-            margin: 10px 0;
+            font-size: 22px;
+            margin: 12px 0;
             text-decoration: none;
+            transition: 0.2s;
         }
         a:hover {
+            background: #111;
             color: yellow;
+            transform: scale(1.05);
+        }
+        img {
+            width: 250px;
+            border-radius: 10px;
+            margin-top: 10px;
+            border: 3px solid #444;
+        }
+        .email-box {
+            margin-top: 15px;
+            font-size: 15px;
+            background: #111;
+            padding: 10px;
+            border-radius: 8px;
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>🎮 Fun Games for school 🎮</h1>
+        <h1>🎮 Fun Games 🎮</h1>
 
-        <!-- PUT YOUR LINKS BELOW -->
-        <a href="https://play.fancade.com/">Fancade</a>
-        <a href="https://baldis-basics-online.github.io/">Baldis basics classic</a>
-        <a href="https://poki.com/en/g/subway-surfers">Subway surfers</a>
-        <img src="https://media0.giphy.com/media/v1.Y2lkPTZjMDliOTUyYTR3cjVrOTV4cGxjOG54ZmhqeW9raDJmZmcwcTI2Znc2YmZwOXhoaiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/Fr5LA2RCQbnVp74CxH/200.gif" alt="Subway Surfers GIFs - Find &amp; Share on GIPHY"/>
-        Please email this gmail to submit games to be added here bigoboyscato@gmail.com please name the email submition for me to see it.
-        <a href="https://poki.com/en/g/subway-surfers">Subway surfers</a>
+        <!-- GAME LINKS -->
+        <a href="https://play.fancade.com/" target="_blank">Fancade</a>
+        <a href="https://baldis-basics-online.github.io/" target="_blank">Baldi's Basics</a>
+        <a href="https://poki.com/en/g/subway-surfers" target="_blank">Subway Surfers</a>
+        <a href="https://poki.com" target="_blank">Poki Games</a>
+        <a href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Cookie Clicker</a>
+        <a href="https://krunker.io/" target="_blank">Krunker.io</a>
+        <a href="https://shellshock.io/" target="_blank">Shell Shockers</a>
+        <a href="https://skribbl.io/" target="_blank">Skribbl.io</a>
+        <a href="https://agar.io/" target="_blank">Agar.io</a>
+
+        <!-- GIF -->
+        <img src="https://media0.giphy.com/media/v1.Y2lkPTZjMDliOTUyYTR3cjVrOTV4cGxjOG54ZmhqeW9raDJmZmcwcTI2Znc2YmZwOXhoaiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/Fr5LA2RCQbnVp74CxH/200.gif">
+
+        <!-- EMAIL BOX -->
+        <div class="email-box">
+            📩 Want to submit a game? Email:<br>
+            <b style="color:cyan;">bigoboyscato@gmail.com</b><br>
+            ⚠️ Please make the subject:<br>
+            <b style="color:yellow;">Submission</b>
+        </div>
 
     </div>
 
